Integer.valueOf provides better time and space performance than new Integer()